--- a/Offline 1/preprocessor-1.ipynb
+++ b/Offline 1/preprocessor-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 31,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -25,6 +25,7 @@
     "# One-hot encode\n",
     "def encode_and_bind(original_dataframe, feature_to_encode):\n",
     "    dummies = pd.get_dummies(original_dataframe[[feature_to_encode]])\n",
+    "    dummies = dummies.iloc[:, :-1]\n",
     "    res = pd.concat([original_dataframe, dummies], axis=1)\n",
     "    res = res.drop([feature_to_encode], axis=1)\n",
     "    return res\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 32,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -63,13 +64,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 33,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_55997/2583104947.py:16: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
+      "  telco_data.InternetService_No = telco_data.InternetService_DSL + telco_data['InternetService_Fiber optic']\n"
+     ]
+    }
+   ],
    "source": [
     "# Preprocessing\n",
     "telco_data.drop('customerID', axis=1, inplace=True)\n",
@@ -86,8 +96,6 @@
     "for column in columns_to_encode:\n",
     "    telco_data = encode_and_bind(telco_data, column)\n",
     "\n",
-    "telco_data.InternetService_No = telco_data.InternetService_DSL + telco_data['InternetService_Fiber optic']\n",
-    "\n",
     "# Move final column for better visualization\n",
     "telco_data.insert(len(telco_data.columns)-1, 'Churn', telco_data.pop('Churn'))\n",
     "\n",
@@ -97,302 +105,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gender</th>\n",
-       "      <th>SeniorCitizen</th>\n",
-       "      <th>Partner</th>\n",
-       "      <th>Dependents</th>\n",
-       "      <th>tenure</th>\n",
-       "      <th>PhoneService</th>\n",
-       "      <th>MultipleLines</th>\n",
-       "      <th>OnlineSecurity</th>\n",
-       "      <th>OnlineBackup</th>\n",
-       "      <th>DeviceProtection</th>\n",
-       "      <th>...</th>\n",
-       "      <th>InternetService_Fiber optic</th>\n",
-       "      <th>InternetService_No</th>\n",
-       "      <th>Contract_Month-to-month</th>\n",
-       "      <th>Contract_One year</th>\n",
-       "      <th>Contract_Two year</th>\n",
-       "      <th>PaymentMethod_Bank transfer (automatic)</th>\n",
-       "      <th>PaymentMethod_Credit card (automatic)</th>\n",
-       "      <th>PaymentMethod_Electronic check</th>\n",
-       "      <th>PaymentMethod_Mailed check</th>\n",
-       "      <th>Churn</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>487</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>488</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>489</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.013889</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>490</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.875000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>491</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.027778</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>492</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.027778</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>493</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.847222</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7 rows × 27 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     gender  SeniorCitizen  Partner  Dependents    tenure  PhoneService  \\\n",
-       "487     0.0            0.0      0.0         0.0  1.000000           1.0   \n",
-       "488     1.0            0.0      1.0         1.0  0.000000           0.0   \n",
-       "489     0.0            0.0      0.0         1.0  0.013889           1.0   \n",
-       "490     0.0            0.0      1.0         1.0  0.875000           1.0   \n",
-       "491     1.0            0.0      0.0         0.0  0.027778           1.0   \n",
-       "492     1.0            0.0      1.0         0.0  0.027778           1.0   \n",
-       "493     0.0            1.0      1.0         0.0  0.847222           1.0   \n",
-       "\n",
-       "     MultipleLines  OnlineSecurity  OnlineBackup  DeviceProtection  ...  \\\n",
-       "487            1.0             0.0           1.0               1.0  ...   \n",
-       "488            0.0             1.0           0.0               1.0  ...   \n",
-       "489            1.0             0.0           0.0               0.0  ...   \n",
-       "490            1.0             0.0           1.0               1.0  ...   \n",
-       "491            0.0             0.0           1.0               0.0  ...   \n",
-       "492            0.0             1.0           0.0               0.0  ...   \n",
-       "493            1.0             0.0           1.0               0.0  ...   \n",
-       "\n",
-       "     InternetService_Fiber optic  InternetService_No  Contract_Month-to-month  \\\n",
-       "487                          0.0                 1.0                      0.0   \n",
-       "488                          0.0                 1.0                      0.0   \n",
-       "489                          1.0                 1.0                      1.0   \n",
-       "490                          1.0                 1.0                      0.0   \n",
-       "491                          0.0                 1.0                      1.0   \n",
-       "492                          1.0                 1.0                      1.0   \n",
-       "493                          0.0                 1.0                      0.0   \n",
-       "\n",
-       "     Contract_One year  Contract_Two year  \\\n",
-       "487                0.0                1.0   \n",
-       "488                0.0                1.0   \n",
-       "489                0.0                0.0   \n",
-       "490                0.0                1.0   \n",
-       "491                0.0                0.0   \n",
-       "492                0.0                0.0   \n",
-       "493                1.0                0.0   \n",
-       "\n",
-       "     PaymentMethod_Bank transfer (automatic)  \\\n",
-       "487                                      1.0   \n",
-       "488                                      1.0   \n",
-       "489                                      0.0   \n",
-       "490                                      1.0   \n",
-       "491                                      0.0   \n",
-       "492                                      0.0   \n",
-       "493                                      1.0   \n",
-       "\n",
-       "     PaymentMethod_Credit card (automatic)  PaymentMethod_Electronic check  \\\n",
-       "487                                    0.0                             0.0   \n",
-       "488                                    0.0                             0.0   \n",
-       "489                                    0.0                             1.0   \n",
-       "490                                    0.0                             0.0   \n",
-       "491                                    0.0                             1.0   \n",
-       "492                                    0.0                             1.0   \n",
-       "493                                    0.0                             0.0   \n",
-       "\n",
-       "     PaymentMethod_Mailed check  Churn  \n",
-       "487                         0.0    0.0  \n",
-       "488                         0.0    0.0  \n",
-       "489                         0.0    1.0  \n",
-       "490                         0.0    0.0  \n",
-       "491                         0.0    0.0  \n",
-       "492                         0.0    1.0  \n",
-       "493                         0.0    0.0  \n",
-       "\n",
-       "[7 rows x 27 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(telco_data.iloc[487:494, :])\n",
     "telco_data.to_csv('telco.csv')"
@@ -400,21 +119,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(7043, 27)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(telco_data.shape)\n",
     "\n"
