--- a/Offline 1/preprocessor-1.ipynb
+++ b/Offline 1/preprocessor-1.ipynb
@@ -2,19 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
     "import pandas as pd\n",
     "from IPython.display import display\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from scipy.stats import entropy\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# h function\n",
+    "def h_func(df):\n",
+    "    p = len(df[df['Churn'] == 1.0])\n",
+    "    n = df.shape[0] - p\n",
+    "    q = p / (p+n)\n",
+    "    h = entropy([q, 1-q], base=2)\n",
+    "    return p, n, h"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# information gain\n",
+    "def info_gain(X):\n",
+    "    p, n, h_output = h_func(X)\n",
+    "    all_features = list(telco_data.columns)\n",
+    "    feature_gain_map = dict()\n",
+    "    for feature in all_features:\n",
+    "        remainder = 0\n",
+    "        values = X[feature].unique()\n",
+    "        if len(values) > 2:\n",
+    "            pass\n",
+    "        else:\n",
+    "            for _, group in X.groupby([feature]):\n",
+    "                pk, nk, h_k = h_func(group)\n",
+    "                remainder += ((pk + nk) / (p + n)) * h_k\n",
+    "                feature_gain_map[feature] = h_output - remainder\n",
+    "\n",
+    "    print(json.dumps(feature_gain_map, indent=4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -34,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 306,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -64,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 307,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -72,11 +123,10 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_55997/2583104947.py:16: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
-      "  telco_data.InternetService_No = telco_data.InternetService_DSL + telco_data['InternetService_Fiber optic']\n"
+      "{'gender': 5.349933671350282e-05, 'SeniorCitizen': 0.015259766252591622, 'Partner': 0.01652413451940382, 'Dependents': 0.02087184590109281, 'PhoneService': 0.00010410414107420163, 'MultipleLines': 0.0011555536142534573, 'OnlineSecurity': 0.02291681174104332, 'OnlineBackup': 0.0049917440437087235, 'DeviceProtection': 0.003213641195506378, 'TechSupport': 0.021075514184494604, 'StreamingTV': 0.002857839953611774, 'StreamingMovies': 0.0026948387301600762, 'PaperlessBilling': 0.027691665182286385, 'Churn': 0.8347419473972114, 'InternetService_DSL': 0.011553763634235659, 'InternetService_Fiber optic': 0.06897344266913896, 'Contract_Month-to-month': 0.13256433122708655, 'Contract_One year': 0.026059526721306625, 'PaymentMethod_Bank transfer (automatic)': 0.010781510516920889, 'PaymentMethod_Credit card (automatic)': 0.014187050061833184, 'PaymentMethod_Electronic check': 0.06336436074199969}\n"
      ]
     }
    ],
@@ -97,21 +147,303 @@
     "    telco_data = encode_and_bind(telco_data, column)\n",
     "\n",
     "# Move final column for better visualization\n",
-    "telco_data.insert(len(telco_data.columns)-1, 'Churn', telco_data.pop('Churn'))\n",
     "\n",
     "all_columns = list(telco_data.columns)\n",
-    "telco_data[all_columns] = MinMaxScaler().fit_transform(telco_data[all_columns])"
+    "telco_data[all_columns] = MinMaxScaler().fit_transform(telco_data[all_columns])\n",
+    "\n",
+    "info_gain(telco_data)\n",
+    "# y = telco_data.pop('Churn').to_frame()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 276,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>SeniorCitizen</th>\n",
+       "      <th>Partner</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>PhoneService</th>\n",
+       "      <th>MultipleLines</th>\n",
+       "      <th>OnlineSecurity</th>\n",
+       "      <th>OnlineBackup</th>\n",
+       "      <th>DeviceProtection</th>\n",
+       "      <th>...</th>\n",
+       "      <th>MonthlyCharges</th>\n",
+       "      <th>TotalCharges</th>\n",
+       "      <th>Churn</th>\n",
+       "      <th>InternetService_DSL</th>\n",
+       "      <th>InternetService_Fiber optic</th>\n",
+       "      <th>Contract_Month-to-month</th>\n",
+       "      <th>Contract_One year</th>\n",
+       "      <th>PaymentMethod_Bank transfer (automatic)</th>\n",
+       "      <th>PaymentMethod_Credit card (automatic)</th>\n",
+       "      <th>PaymentMethod_Electronic check</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>487</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>0.713495</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>488</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.341294</td>\n",
+       "      <td>0.159090</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>489</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.013889</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.558209</td>\n",
+       "      <td>0.006410</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>490</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.875000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.861194</td>\n",
+       "      <td>0.759110</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>491</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.027778</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.405473</td>\n",
+       "      <td>0.011003</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.027778</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.558706</td>\n",
+       "      <td>0.013916</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>493</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.847222</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.455721</td>\n",
+       "      <td>0.448165</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     gender  SeniorCitizen  Partner  Dependents    tenure  PhoneService  \\\n",
+       "487     0.0            0.0      0.0         0.0  1.000000           1.0   \n",
+       "488     1.0            0.0      1.0         1.0  0.000000           0.0   \n",
+       "489     0.0            0.0      0.0         1.0  0.013889           1.0   \n",
+       "490     0.0            0.0      1.0         1.0  0.875000           1.0   \n",
+       "491     1.0            0.0      0.0         0.0  0.027778           1.0   \n",
+       "492     1.0            0.0      1.0         0.0  0.027778           1.0   \n",
+       "493     0.0            1.0      1.0         0.0  0.847222           1.0   \n",
+       "\n",
+       "     MultipleLines  OnlineSecurity  OnlineBackup  DeviceProtection  ...  \\\n",
+       "487            1.0             0.0           1.0               1.0  ...   \n",
+       "488            0.0             1.0           0.0               1.0  ...   \n",
+       "489            1.0             0.0           0.0               0.0  ...   \n",
+       "490            1.0             0.0           1.0               1.0  ...   \n",
+       "491            0.0             0.0           1.0               0.0  ...   \n",
+       "492            0.0             1.0           0.0               0.0  ...   \n",
+       "493            1.0             0.0           1.0               0.0  ...   \n",
+       "\n",
+       "     MonthlyCharges  TotalCharges  Churn  InternetService_DSL  \\\n",
+       "487        0.700000      0.713495    0.0                  1.0   \n",
+       "488        0.341294      0.159090    0.0                  1.0   \n",
+       "489        0.558209      0.006410    1.0                  0.0   \n",
+       "490        0.861194      0.759110    0.0                  0.0   \n",
+       "491        0.405473      0.011003    0.0                  1.0   \n",
+       "492        0.558706      0.013916    1.0                  0.0   \n",
+       "493        0.455721      0.448165    0.0                  1.0   \n",
+       "\n",
+       "     InternetService_Fiber optic  Contract_Month-to-month  Contract_One year  \\\n",
+       "487                          0.0                      0.0                0.0   \n",
+       "488                          0.0                      0.0                0.0   \n",
+       "489                          1.0                      1.0                0.0   \n",
+       "490                          1.0                      0.0                0.0   \n",
+       "491                          0.0                      1.0                0.0   \n",
+       "492                          1.0                      1.0                0.0   \n",
+       "493                          0.0                      0.0                1.0   \n",
+       "\n",
+       "     PaymentMethod_Bank transfer (automatic)  \\\n",
+       "487                                      1.0   \n",
+       "488                                      1.0   \n",
+       "489                                      0.0   \n",
+       "490                                      1.0   \n",
+       "491                                      0.0   \n",
+       "492                                      0.0   \n",
+       "493                                      1.0   \n",
+       "\n",
+       "     PaymentMethod_Credit card (automatic)  PaymentMethod_Electronic check  \n",
+       "487                                    0.0                             0.0  \n",
+       "488                                    0.0                             0.0  \n",
+       "489                                    0.0                             1.0  \n",
+       "490                                    0.0                             0.0  \n",
+       "491                                    0.0                             1.0  \n",
+       "492                                    0.0                             1.0  \n",
+       "493                                    0.0                             0.0  \n",
+       "\n",
+       "[7 rows x 24 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(telco_data.iloc[487:494, :])\n",
     "telco_data.to_csv('telco.csv')"
@@ -119,13 +451,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 277,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7043, 24)\n"
+     ]
+    }
+   ],
    "source": [
     "print(telco_data.shape)\n",
     "\n"
@@ -133,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": []
