Fixed bug with binary feature information gain

--- a/Offline 1/preprocessor-1.ipynb
+++ b/Offline 1/preprocessor-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 46,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 47,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -49,6 +49,7 @@
     "    all_features = list(telco_data.columns)\n",
     "    feature_gain_map = dict()\n",
     "    for feature in all_features:\n",
+    "        remainder = 0\n",
     "        if feature == 'Churn':\n",
     "            continue\n",
     "        values = X[feature].unique()\n",
@@ -57,15 +58,15 @@
     "        else:\n",
     "            for _, group in X.groupby([feature]):\n",
     "                pk, nk, h_k = h_func(group)\n",
-    "                remainder = ((pk + nk) / (p + n)) * h_k\n",
-    "                feature_gain_map[feature] = h_output - remainder\n",
+    "                remainder += ((pk + nk) / (p + n)) * h_k\n",
+    "            feature_gain_map[feature] = h_output - remainder\n",
     "\n",
     "    print(json.dumps(feature_gain_map, indent=4))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 48,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 49,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 51,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 53,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 55,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
