Updated preprocessor 1 and 2

--- a/Offline 1/preprocessor-1.ipynb
+++ b/Offline 1/preprocessor-1.ipynb
@@ -51,39 +51,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "    \"gender\": 5.349933671350282e-05,\n",
-      "    \"SeniorCitizen\": 0.015259766252591622,\n",
-      "    \"Partner\": 0.01652413451940382,\n",
-      "    \"Dependents\": 0.02087184590109281,\n",
-      "    \"tenure\": 0.018492615235092935,\n",
-      "    \"PhoneService\": 0.00010410414107420163,\n",
-      "    \"MultipleLines\": 0.0011555536142534573,\n",
-      "    \"OnlineSecurity\": 0.02291681174104332,\n",
-      "    \"OnlineBackup\": 0.0049917440437087235,\n",
-      "    \"DeviceProtection\": 0.003213641195506378,\n",
-      "    \"TechSupport\": 0.021075514184494604,\n",
-      "    \"StreamingTV\": 0.002857839953611774,\n",
-      "    \"StreamingMovies\": 0.0026948387301600762,\n",
-      "    \"PaperlessBilling\": 0.027691665182286385,\n",
-      "    \"MonthlyCharges\": 0.02184036540844314,\n",
-      "    \"TotalCharges\": 0.006919204850787231,\n",
-      "    \"InternetService_DSL\": 0.011553763634235659,\n",
-      "    \"InternetService_Fiber optic\": 0.06897344266913896,\n",
-      "    \"Contract_Month-to-month\": 0.13256433122708655,\n",
-      "    \"Contract_One year\": 0.026059526721306625,\n",
-      "    \"PaymentMethod_Bank transfer (automatic)\": 0.010781510516920889,\n",
-      "    \"PaymentMethod_Credit card (automatic)\": 0.014187050061833184,\n",
-      "    \"PaymentMethod_Electronic check\": 0.06336436074199969\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Preprocessing\n",
     "telco_data.drop('customerID', axis=1, inplace=True)\n",
@@ -104,9 +72,7 @@
     "telco_data.insert(len(telco_data.columns)-1, 'Churn', telco_data.pop('Churn'))\n",
     "\n",
     "all_columns = list(telco_data.columns)\n",
-    "telco_data[all_columns] = MinMaxScaler().fit_transform(telco_data[all_columns])\n",
-    "\n",
-    "utils.info_gain(telco_data)"
+    "telco_data[all_columns] = MinMaxScaler().fit_transform(telco_data[all_columns])"
    ]
   },
   {
