Converted preprocessor 1 to .py script. Working on training it

--- a/Offline 1/logistic_regression.ipynb
+++ b/Offline 1/logistic_regression.ipynb
@@ -9,7 +9,8 @@
    "outputs": [],
    "source": [
     "#imports\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from preprocessor_1 import preprocess"
    ]
   },
   {
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# loss function\n",
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# training function\n",
@@ -74,11 +75,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def logistic_regression(max_parameters_to_use=100):\n",
-    "    pass"
+    "    data = preprocess()\n",
+    "    y = data.pop('Churn').to_frame().to_numpy()\n",
+    "    x = data.to_numpy()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "logistic_regression()\n"
    ],
    "metadata": {
     "collapsed": false,
