--- a/Offline 1/preprocessor-1.ipynb
+++ b/Offline 1/preprocessor-1.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "from IPython.display import display\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "import utils"
+    "import utils\n"
    ]
   },
   {
