Working on improving logistic regression's performance

--- a/Offline 1/logistic_regression.ipynb
+++ b/Offline 1/logistic_regression.ipynb
@@ -26,8 +26,8 @@
    "outputs": [],
    "source": [
     "# tanh function\n",
-    "def tanh_function(z):\n",
-    "    return (np.exp(z) - np.exp(-z)) / (np.exp(z) + np.exp(-z))"
+    "def predict(h):\n",
+    "    return (h>0.0) * 1\n"
    ]
   },
   {
@@ -65,14 +65,15 @@
     "    error = 0\n",
     "    for i in range(no_of_iterations):\n",
     "        z = np.dot(x, w)\n",
-    "        h = tanh_function(z)\n",
+    "        h = np.tanh(z)\n",
+    "        h = predict(h)\n",
     "        error = loss(h, y, no_of_data)\n",
     "        if error < early_terminate_threshold:\n",
     "            break\n",
     "        gradient = np.dot(x.T, (y - h) * (1 - h ** 2))\n",
     "        w += learning_rate * gradient\n",
     "\n",
-    "    print('Error rate in training set= '.format(error))\n",
+    "    print('Error rate in training set= {}'.format(error))\n",
     "    return w"
    ]
   },
