Adaboost working hopefully

--- a/Offline 1/1605053.ipynb
+++ b/Offline 1/1605053.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
+    "import math\n",
+    "\n",
     "from pandas import DataFrame\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -19,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 322,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 323,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 324,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 325,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 326,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -149,7 +151,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 327,
+   "outputs": [],
+   "source": [
+    "def predict(h):\n",
+    "    h_ret = np.array([1.0 if it > 0 else -1.0 for it in h])\n",
+    "    h_ret = h_ret.reshape((h_ret.shape[0], 1))\n",
+    "    return h_ret\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -167,30 +186,117 @@
     "        h = np.tanh(z)\n",
     "        error = loss(h, y, no_of_data)\n",
     "        if error < early_terminate_threshold:\n",
-    "            print(i)\n",
     "            break\n",
     "        gradient = np.dot(x.T, (y - h) * (1 - h ** 2))\n",
     "        w += learning_rate * gradient\n",
     "\n",
-    "    print('Cost in training set= {}'.format(error))\n",
     "    return w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 329,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     },
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "def resample(x, y, w):\n",
+    "    indices = np.random.choice(x.shape[0], x.shape[0], replace=True, p=w )\n",
+    "    x_data = x[indices]\n",
+    "    y_data = y[indices]\n",
+    "    return x_data, y_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "outputs": [],
+   "source": [
+    "# Adaboost\n",
+    "def adaboost(example_x, example_y, k):\n",
+    "    no_of_data = example_x.shape[0]\n",
+    "    w = np.array([1/no_of_data] * no_of_data)\n",
+    "    h = []\n",
+    "    z = []\n",
+    "    for i in range(k):\n",
+    "        x_data, y_data = resample(example_x, example_y, w)\n",
+    "        w_learn = train(x_data, y_data, early_terminate_threshold=0.5)\n",
+    "        h_k = np.tanh(np.dot(example_x, w_learn))\n",
+    "        h_k = predict(h_k)\n",
+    "        error = 0\n",
+    "        for j in range(no_of_data):\n",
+    "            if h_k[j] != y[j]:\n",
+    "                error += w[j]\n",
+    "\n",
+    "        if error > 0.5:\n",
+    "            continue\n",
+    "\n",
+    "        for j in range(no_of_data):\n",
+    "            if h_k[j] == y[j]:\n",
+    "                w[j] = w[j] * (error / (1-error))\n",
+    "\n",
+    "        w /= np.sum(w)\n",
+    "        h.append(w_learn)\n",
+    "        z.append(math.log((1-error)/error, 2))\n",
+    "\n",
+    "    return h, z\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost in training set= 0.2685647177860585\n"
+      "623\n",
+      "Cost in training set= 0.4215323746860775\n",
+      "Error 0.3471778487752812\n",
+      "Pushing\n",
+      "93\n",
+      "Cost in training set= 0.4139434324854603\n",
+      "Error 0.4238829285054123\n",
+      "Pushing\n",
+      "2074\n",
+      "Cost in training set= 0.4125713578627466\n",
+      "Error 0.4428477291003513\n",
+      "Pushing\n",
+      "759\n",
+      "Cost in training set= 0.4777957686724268\n",
+      "Error 0.4878025205366351\n",
+      "Pushing\n",
+      "803\n",
+      "Cost in training set= 0.4603188650969201\n",
+      "Error 0.4739367801698406\n",
+      "Pushing\n",
+      "2037\n",
+      "Cost in training set= 0.44256292567559924\n",
+      "Error 0.49231355500370777\n",
+      "Pushing\n",
+      "719\n",
+      "Cost in training set= 0.4752697319531487\n",
+      "Error 0.5513178459088902\n",
+      "90\n",
+      "Cost in training set= 0.4760907895508849\n",
+      "Error 0.5293909762206234\n",
+      "1824\n",
+      "Cost in training set= 0.40908866268196103\n",
+      "Error 0.5434132860415377\n",
+      "77\n",
+      "Cost in training set= 0.4497895125100404\n",
+      "Error 0.5290882851842129\n",
+      "6\n"
      ]
     }
    ],
@@ -208,17 +314,36 @@
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=10)\n",
     "\n",
-    "w = train(x_train, y_train, early_terminate_threshold=0.5)\n",
+    "# w = train(x_train, y_train, early_terminate_threshold=0.5)\n",
+    "#\n",
+    "# h_out = predict(w, x_test)\n",
+    "# print(accuracy(h_out, y_test))\n",
     "\n",
-    "h_out = np.tanh(np.dot(x_test, w))\n",
-    "h_out = np.array([1.0 if it > 0 else -1.0 for it in h_out])\n",
-    "h_out = h_out.reshape((h_out.shape[0], 1))\n",
-    "print(accuracy(h_out, y_test))\n"
-   ]
+    "h_ada, z_ada = adaboost(x_train, y_train, 10)\n",
+    "\n",
+    "\n",
+    "hypo = np.zeros(y_test.shape)\n",
+    "for h, z in zip(h_ada, z_ada):\n",
+    "    l = np.tanh(np.dot(x_test, h))\n",
+    "    h_out = predict(l)\n",
+    "    hypo += z * l\n",
+    "\n",
+    "hypo /= sum(z_ada)\n",
+    "\n",
+    "h_out = predict(hypo)\n",
+    "print(accuracy(h_out, y_test))\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": []
