--- a/Offline 1/1605053.ipynb
+++ b/Offline 1/1605053.ipynb
@@ -152,19 +152,18 @@
   {
    "cell_type": "code",
    "execution_count": 327,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def predict(h):\n",
     "    h_ret = np.array([1.0 if it > 0 else -1.0 for it in h])\n",
     "    h_ret = h_ret.reshape((h_ret.shape[0], 1))\n",
     "    return h_ret\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -214,6 +213,11 @@
   {
    "cell_type": "code",
    "execution_count": 330,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Adaboost\n",
@@ -244,59 +248,22 @@
     "        z.append(math.log((1-error)/error, 2))\n",
     "\n",
     "    return h, z\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 391,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "623\n",
-      "Cost in training set= 0.4215323746860775\n",
-      "Error 0.3471778487752812\n",
-      "Pushing\n",
-      "93\n",
-      "Cost in training set= 0.4139434324854603\n",
-      "Error 0.4238829285054123\n",
-      "Pushing\n",
-      "2074\n",
-      "Cost in training set= 0.4125713578627466\n",
-      "Error 0.4428477291003513\n",
-      "Pushing\n",
-      "759\n",
-      "Cost in training set= 0.4777957686724268\n",
-      "Error 0.4878025205366351\n",
-      "Pushing\n",
-      "803\n",
-      "Cost in training set= 0.4603188650969201\n",
-      "Error 0.4739367801698406\n",
-      "Pushing\n",
-      "2037\n",
-      "Cost in training set= 0.44256292567559924\n",
-      "Error 0.49231355500370777\n",
-      "Pushing\n",
-      "719\n",
-      "Cost in training set= 0.4752697319531487\n",
-      "Error 0.5513178459088902\n",
-      "90\n",
-      "Cost in training set= 0.4760907895508849\n",
-      "Error 0.5293909762206234\n",
-      "1824\n",
-      "Cost in training set= 0.40908866268196103\n",
-      "Error 0.5434132860415377\n",
-      "77\n",
-      "Cost in training set= 0.4497895125100404\n",
-      "Error 0.5290882851842129\n",
-      "6\n"
+      "0.7544357700496807\n"
      ]
     }
    ],
@@ -314,10 +281,10 @@
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=10)\n",
     "\n",
-    "# w = train(x_train, y_train, early_terminate_threshold=0.5)\n",
-    "#\n",
-    "# h_out = predict(w, x_test)\n",
-    "# print(accuracy(h_out, y_test))\n",
+    "w = train(x_train, y_train, early_terminate_threshold=0.5)\n",
+    "h_out = np.tanh(np.dot(x_test, w))\n",
+    "h_out = predict(h_out)\n",
+    "print('Logistic regression accuracy {}.'.format(accuracy(h_out, y_test)))\n",
     "\n",
     "h_ada, z_ada = adaboost(x_train, y_train, 10)\n",
     "\n",
@@ -331,15 +298,9 @@
     "hypo /= sum(z_ada)\n",
     "\n",
     "h_out = predict(hypo)\n",
-    "print(accuracy(h_out, y_test))\n",
+    "print('Logistic regression accuracy {}.'.format(accuracy(h_out, y_test)))\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
