Refactored loss, accuracy and prediction functions

--- a/Offline 1/1605053.ipynb
+++ b/Offline 1/1605053.ipynb
@@ -130,9 +130,9 @@
    "outputs": [],
    "source": [
     "# loss function\n",
-    "def loss(h, y, size):\n",
-    "    error = 0.5 * np.sum((y - h) ** 2) / size\n",
-    "    return error\n"
+    "def loss(y_predicted, y_actual, size):\n",
+    "    error = 0.5 * np.sum((y_actual - y_predicted) ** 2) / size\n",
+    "    return error"
    ]
   },
   {
@@ -145,8 +145,9 @@
    },
    "outputs": [],
    "source": [
-    "def accuracy(h, y):\n",
-    "    return  np.sum(y == h) / y.shape[0]"
+    "# accuracy function\n",
+    "def accuracy(y_predicted, y_actual):\n",
+    "    return  np.sum(y_actual == y_predicted) / y_actual.shape[0]"
    ]
   },
   {
@@ -159,10 +160,11 @@
    },
    "outputs": [],
    "source": [
-    "def predict(h):\n",
-    "    h_ret = np.array([1.0 if it > 0 else -1.0 for it in h])\n",
-    "    h_ret = h_ret.reshape((h_ret.shape[0], 1))\n",
-    "    return h_ret\n"
+    "# prediction function for determining label of hypothesis\n",
+    "def predict(hypothesis):\n",
+    "    labels = np.array([1.0 if it > 0 else -1.0 for it in hypothesis])\n",
+    "    labels = labels.reshape((labels.shape[0], 1))\n",
+    "    return labels"
    ]
   },
   {
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 402,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -263,7 +265,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7544357700496807\n"
+      "Logistic regression accuracy 0.6607523066004258.\n",
+      "Logistic regression accuracy 0.7565649396735273.\n"
      ]
     }
    ],
