Fixed major bug with adaboost

--- a/Offline 1/1605053.ipynb
+++ b/Offline 1/1605053.ipynb
@@ -235,14 +235,14 @@
     "        h_k = predict(h_k)\n",
     "        error = 0\n",
     "        for j in range(no_of_data):\n",
-    "            if h_k[j] != y[j]:\n",
+    "            if h_k[j] != example_y[j]:\n",
     "                error += w[j]\n",
     "\n",
     "        if error > 0.5:\n",
     "            continue\n",
     "\n",
     "        for j in range(no_of_data):\n",
-    "            if h_k[j] == y[j]:\n",
+    "            if h_k[j] == example_y[j]:\n",
     "                w[j] = w[j] * (error / (1-error))\n",
     "\n",
     "        w /= np.sum(w)\n",
