More refaactoring and diving code into smaller cells

--- a/Offline 1/1605053.ipynb
+++ b/Offline 1/1605053.ipynb
@@ -205,6 +205,7 @@
    },
    "outputs": [],
    "source": [
+    "# resample function for adaboost\n",
     "def resample(x, y, w):\n",
     "    indices = np.random.choice(x.shape[0], x.shape[0], replace=True, p=w )\n",
     "    x_data = x[indices]\n",
@@ -276,21 +277,40 @@
     "data = data.to_numpy()\n",
     "rows, columns = data.shape\n",
     "\n",
-    "x = data[:, :-1]\n",
-    "y = data[:, -1]\n",
+    "data_x = data[:, :-1]\n",
+    "data_y = data[:, -1]\n",
     "\n",
-    "y = np.array([1.0 if it > 0 else -1.0 for it in y])\n",
-    "y = y.reshape((y.shape[0], 1))\n",
+    "data_y = np.array([1.0 if it > 0 else -1.0 for it in data_y])\n",
+    "data_y = data_y.reshape((data_y.shape[0], 1))\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=10)\n",
-    "\n",
-    "w = train(x_train, y_train, early_terminate_threshold=0.5)\n",
-    "h_out = np.tanh(np.dot(x_test, w))\n",
-    "h_out = predict(h_out)\n",
-    "print('Logistic regression accuracy {}.'.format(accuracy(h_out, y_test)))\n",
-    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(data_x, data_y, test_size=0.2, random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# logistic regression test\n",
+    "w_logi = train(x_train, y_train, early_terminate_threshold=0.5)\n",
+    "h_logi = np.tanh(np.dot(x_test, w_logi))\n",
+    "h_logi = predict(h_logi)\n",
+    "print('Logistic regression accuracy {}.'.format(accuracy(h_logi, y_test)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# adaboost test\n",
     "h_ada, z_ada = adaboost(x_train, y_train, 10)\n",
-    "\n",
     "\n",
     "hypo = np.zeros(y_test.shape)\n",
     "for h, z in zip(h_ada, z_ada):\n",
@@ -303,7 +323,13 @@
     "h_out = predict(hypo)\n",
     "print('Logistic regression accuracy {}.'.format(accuracy(h_out, y_test)))\n",
     "\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
