Cell view working in pycharm

--- a/Offline 1/1605053.ipynb
+++ b/Offline 1/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 30,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 31,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 32,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 33,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 34,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 35,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 36,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 37,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 38,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -255,22 +255,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 45,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logistic regression accuracy 0.6607523066004258.\n",
-      "Logistic regression accuracy 0.7565649396735273.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = preprocess()\n",
     "data.insert(0, 'Ones', 1.0)\n",
@@ -288,8 +279,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 46,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic regression accuracy 0.7012065294535131.\n"
+     ]
+    }
+   ],
    "source": [
     "# logistic regression test\n",
     "w_logi = train(x_train, y_train, early_terminate_threshold=0.5)\n",
@@ -306,8 +305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 47,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic regression accuracy 0.7963094393186657.\n"
+     ]
+    }
+   ],
    "source": [
     "# adaboost test\n",
     "h_ada, z_ada = adaboost(x_train, y_train, 10)\n",
@@ -321,8 +328,7 @@
     "hypo /= sum(z_ada)\n",
     "\n",
     "h_out = predict(hypo)\n",
-    "print('Logistic regression accuracy {}.'.format(accuracy(h_out, y_test)))\n",
-    "\n"
+    "print('Logistic regression accuracy {}.'.format(accuracy(h_out, y_test)))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -333,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": []
