--- a/Offline 1/1605053.ipynb
+++ b/Offline 1/1605053.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -279,13 +279,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic regression accuracy 0.7012065294535131.\n"
+      "Logistic regression accuracy 0.6706884315117104.\n"
      ]
     }
    ],
@@ -305,19 +305,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic regression accuracy 0.7963094393186657.\n"
+      "Adaboost regression accuracy 0.8026969481902059.\n"
      ]
     }
    ],
    "source": [
     "# adaboost test\n",
-    "h_ada, z_ada = adaboost(x_train, y_train, 10)\n",
+    "h_ada, z_ada = adaboost(x_train, y_train, 15)\n",
     "\n",
     "hypo = np.zeros(y_test.shape)\n",
     "for h, z in zip(h_ada, z_ada):\n",
@@ -328,7 +328,7 @@
     "hypo /= sum(z_ada)\n",
     "\n",
     "h_out = predict(hypo)\n",
-    "print('Logistic regression accuracy {}.'.format(accuracy(h_out, y_test)))\n"
+    "print('Adaboost regression accuracy {}.'.format(accuracy(h_out, y_test)))\n"
    ],
    "metadata": {
     "collapsed": false,
